tests/ui/errors/snapshots/lex_unterminated_string.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Unterminated string literal
   ╭─[test.lis:1:9]
 1 │ let x = "unterminated
   ·         ┬
   ·         ╰── string not completed
   ╰────
  help: Add a closing double quote · code: [lex.unterminated_string]
