tests/ui/errors/snapshots/map_key_alias_body_rejects_noncomparable_struct.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid map key type
   ╭─[test.lis:4:1]
 3 │ 
 4 │ type Index = Map<Holder, int>
   · ──────────────┬──────────────
   ·               ╰── `Holder` is not comparable
   ╰────
  help: Map keys must be comparable in Go. a struct containing non-comparable fields cannot be used as map keys · code: [infer.non_comparable_map_key]
