tests/ui/errors/snapshots/map_key_constructor_rejects_noncomparable_struct.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid map key type
   ╭─[test.lis:5:15]
 4 │ fn test() -> int {
 5 │   let mut m = Map.new<Holder, int>()
   ·               ───────────┬──────────
   ·                          ╰── `Holder` is not comparable
 6 │   m[Holder { items: [1] }] = 1
   ╰────
  help: Map keys must be comparable in Go. a struct containing non-comparable fields cannot be used as map keys · code: [infer.non_comparable_map_key]
